starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__raise_call.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nraise blockHeight()"
---
Spanned {
    node: Raise {
        expr: Spanned {
            node: Call {
                callee: Spanned {
                    node: Identifier(
                        Identifier {
                            name: "blockHeight",
                            span: Some(
                                6..17,
                            ),
                        },
                    ),
                    span: 6..17,
                    comments_before: [],
                    comments_after: [],
                },
                args: [],
            },
            span: 6..19,
            comments_before: [],
            comments_after: [],
        },
    },
    span: 0..19,
    comments_before: [],
    comments_after: [],
}
