starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__runtime_call.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nruntime blockHeight()"
---
Spanned {
    node: Runtime {
        expr: Spanned {
            node: Call {
                callee: Spanned {
                    node: Identifier(
                        Identifier {
                            name: "blockHeight",
                            span: Some(
                                8..19,
                            ),
                        },
                    ),
                    span: 8..19,
                    comments_before: [],
                    comments_after: [],
                },
                args: [],
            },
            span: 8..21,
            comments_before: [],
            comments_after: [],
        },
    },
    span: 0..21,
    comments_before: [],
    comments_after: [],
}
