starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__runtime_namespaced_call.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nruntime context::blockHeight()"
---
Spanned {
    node: Runtime {
        expr: Spanned {
            node: EnumConstructor {
                enum_name: Identifier {
                    name: "context",
                    span: Some(
                        8..15,
                    ),
                },
                variant: Identifier {
                    name: "blockHeight",
                    span: Some(
                        17..28,
                    ),
                },
                payload: Tuple(
                    [],
                ),
            },
            span: 8..30,
            comments_before: [],
            comments_after: [],
        },
    },
    span: 0..30,
    comments_before: [],
    comments_after: [],
}
