starstream-compiler/src/parser/expression/snapshots/starstream_compiler__parser__expression__tests__struct_literal_expression.snap
---
source: starstream-compiler/src/parser/expression/mod.rs
description: "Code:\n\nPoint {\n    x: 10,\n    y: value + 1,\n}\n"
---
Spanned {
    node: StructLiteral {
        name: Identifier {
            name: "Point",
            span: Some(
                0..5,
            ),
        },
        fields: [
            StructLiteralField {
                name: Identifier {
                    name: "x",
                    span: Some(
                        12..13,
                    ),
                },
                value: Spanned {
                    node: Literal(
                        Integer(
                            10,
                        ),
                    ),
                    span: 15..17,
                },
            },
            StructLiteralField {
                name: Identifier {
                    name: "y",
                    span: Some(
                        23..24,
                    ),
                },
                value: Spanned {
                    node: Binary {
                        op: Add,
                        left: Spanned {
                            node: Identifier(
                                Identifier {
                                    name: "value",
                                    span: Some(
                                        26..31,
                                    ),
                                },
                            ),
                            span: 26..32,
                        },
                        right: Spanned {
                            node: Literal(
                                Integer(
                                    1,
                                ),
                            ),
                            span: 34..35,
                        },
                    },
                    span: 26..35,
                },
            },
        ],
    },
    span: 0..39,
}
